k8s/06-go-consumers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer
  namespace: weather-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-consumer
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
      - name: kafka-consumer
        image:  k3d-zot-registry:5000/kafka-consumer:local
        #imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-consumer
  namespace: weather-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-consumer
  template:
    metadata:
      labels:
        app: rabbitmq-consumer
    spec:
      containers:
      - name: rabbitmq-consumer
        image: k3d-zot-registry:5000/rabbitmq-consumer:local
        # imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
