k8s/04-go-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-router
  namespace: weather-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-router
  template:
    metadata:
      labels:
        app: go-router
    spec:
      containers:
      - name: go-router
        image: k3d-zot-registry:5000/go-router:local
        # imagePullPolicy: IfNotPresent # Evita que K8s intente descargarla de internet
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: go-router-service
  namespace: weather-system
spec:
  selector:
    app: go-router
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
