k8s/05-go-writers.yaml
# ==========================================
# Deployment 2: Kafka Writer
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-writer
  namespace: weather-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-writer
  template:
    metadata:
      labels:
        app: kafka-writer
    spec:
      containers:
      - name: kafka-writer
        image: k3d-zot-registry:5000/go-writer-kafka:local
        # imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50051
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-writer-service
  namespace: weather-system
spec:
  selector:
    app: kafka-writer
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051

---
# ==========================================
# Deployment 3: RabbitMQ Writer
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-writer
  namespace: weather-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-writer
  template:
    metadata:
      labels:
        app: rabbitmq-writer
    spec:
      containers:
      - name: rabbitmq-writer
        image: k3d-zot-registry:5000/go-writer-rabbitmq:local
        # imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50052
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-writer-service
  namespace: weather-system
spec:
  selector:
    app: rabbitmq-writer
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
