k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: weather-system
  # Eliminamos la anotación de rewrite-target para que mande la ruta tal cual
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # 1. Ruta raíz para la interfaz visual (Tu navegador)
      - path: /
        pathType: Prefix
        backend:
            service:
              name: grafana-service
              port:
                number: 3000
      # 2. Ruta para la API (Los mensajes de Locust)
      - path: /tweet
        pathType: Prefix
        backend:
            service:
              name: api-rust-service
              port:
                number: 8000
